@@ -1,6 +1,7 @@
 0.06
  - Regen README file.
  - Rename example file to better name.
+ - Rewrite to way with print in time of match.
 
 0.05 2025-05-08T18:50:03+02:00
  - Add support for filtering by control fields.
